--- a/style.css
+++ b/style.css
@@ -711,14 +711,29 @@ span.logos {
     
     /**-- H O M E --**/
 
+    /**-- H O M E --**/
+
     .no-mobile{
         display: none;
     }
 
+    .project .row {
+        align-items: normal;
+    }
+
+    .project .row .project-col {
+        height: auto;
+
+        justify-content: center;
+    }
+
+    .col-left {
+        gap: 0px;
+        padding-bottom: 0px!important;
+    }
+
     .project .pages-group{
         display: flex!important;
-        margin-top: 8%;
-        margin-bottom: 0;
     }
 
     .container{
@@ -729,10 +744,8 @@ span.logos {
         height: auto;
     }
 
-    .col-left {
-        gap:35px;
-        padding-bottom: 8%!important;
-        padding-top: 8%;
+    .home-page1, .home-page2, .home-page3 {
+        margin-bottom: 25%;
     }
 
     .about{
